# easy_helmert

./: .gitignore  README.md  easy_helmert.json  easy_helmert2.json  pyproject.toml
resources/icons/: icons.xrc
resources/web/templates/: map_dialog.html.tpl
src/: main.py
src/core/: constants.py  crs_database.py  geoid_correction.py  models.py  transformation.py
src/core/calibration_importers/: __init__.py  base.py  cot_importer.py  factory.py  loc_importer.py
src/gui/controllers/: main_frame.py
src/gui/dialogs/: about_dialog.py  crs_picker_dialog.py  import_dialog.py  map_dialog.py  parse_degrees_dialog.py  webview2_help_dialog.py
src/gui/forms/: easy_helmert_base.py
src/gui/utils/: degrees_parser.py  dms.py  kml_export.py  map_html.py  map_points_builder.py
src/gui/widgets/: coordinate_grid.py
src/utils/: crs_export.py  crs_utils.py  resources.py  xrc_loader.py
ui_design/: main_frame.fbp
