[project]
name = "easy-helmert"
version = "0.8.0"
description = "Утилита для вычисления 7 параметров перехода из одной системы координат в другую"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "wxpython>=4.2.5",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
